# textbook-converter

./: README.md  pyproject.toml
textbook_converter/: converter.py  solver.py
